@@ -1,3 +1,6 @@
+RH-2007-11-30-0: Bugfix:    Hedeby: changes in show_component_status output fixed
+                 Review:    CR
+
 JG-2007-11-30-0: Bugfix:    removed a "wait_for_enter"
 
 MP-2007-11-30-0: Bugfix:    fix of print_results function that fixes matching
